--- a/Analysis/oxidations_figures.Rmd
+++ b/Analysis/oxidations_figures.Rmd
@@ -13,7 +13,7 @@ require(cowplot) # for plotting
 
 Read in the previously generated data table:
 ```{r}
-mods_summary <- read.csv("./GeneratedDataFiles/oxydations.csv")
+mods_summary <- read.csv("./GeneratedDataFiles/oxidations.csv")
 ```
 
 
@@ -21,10 +21,10 @@ mods_summary <- read.csv("./GeneratedDataFiles/oxydations.csv")
 This result is simply to verify that we get the same results as using the alternative pipeline (mods_vs_time.Rmd).
 ```{r fig.width=10, fig.height=4}
 # extract the +16 modification
-plus16mod <- filter(mods_summary, mod=="any_p16")
+mods <- filter(mods_summary, mod=="any_p16")
 
 # absolute fraction
-plot1 <- ggplot(plus16mod, aes(x=time, y=100*frac.mod.abs, color=biol.rep)) +
+plot1 <- ggplot(mods, aes(x=time, y=100*frac.mod.abs, color=biol.rep)) +
   scale_x_log10(breaks = c(3, 4, 5, 6, 8, 24, 48, 168, 336)) +
   ylim(0, 15) + 
   geom_point() +
@@ -33,7 +33,7 @@ plot1 <- ggplot(plus16mod, aes(x=time, y=100*frac.mod.abs, color=biol.rep)) +
   xlab("Time (hours)") +
   scale_color_discrete(name = "Biol. repeat")
 
-plot2 <- ggplot(plus16mod, aes(x=time, y=odds.mod.other, color=biol.rep)) +
+plot2 <- ggplot(mods, aes(x=time, y=odds.mod.other, color=biol.rep)) +
   scale_x_log10(breaks = c(3, 4, 5, 6, 8, 24, 48, 168, 336)) +
   scale_y_log10(breaks = c(.03, .04, .05, .06, .07, .08, .09, .1, .2, .3, .4, .5, .6, .7, .8, .9, 1, 2, 3, 4, 5),
                 labels = c("0.03", "", "", "", "", "", "", "0.1", "", "0.3", "", "0.5", "", "", "", "", "1.0", "", "3.0", "", ""),
@@ -49,9 +49,9 @@ plot_grid(plot1, plot2, labels = c("A", "B"))
 
 The percent modified peptides doesn't change with time, and neither do the odds:
 ```{r}
-perc.model <- lm(frac.mod.abs ~ log(time), data=plus16mod)
+perc.model <- lm(frac.mod.abs ~ log(time), data=mods)
 summary(perc.model)
-odds.model <- lm(log(odds.mod.other) ~ log(time), data=plus16mod)
+odds.model <- lm(log(odds.mod.other) ~ log(time), data=mods)
 summary(odds.model)
 ```
 
@@ -61,10 +61,10 @@ summary(odds.model)
 The +32 Da mods are very rare.
 ```{r fig.width=10, fig.height=4}
 # extract the +32 modification
-plus32mod <- filter(mods_summary, mod=="any_p32")
+mods <- filter(mods_summary, mod=="any_p32")
 
 # absolute fraction
-plot1 <- ggplot(plus32mod, aes(x=time, y=100*frac.mod.abs, color=biol.rep)) +
+plot1 <- ggplot(mods, aes(x=time, y=100*frac.mod.abs, color=biol.rep)) +
   scale_x_log10(breaks = c(3, 4, 5, 6, 8, 24, 48, 168, 336)) +
   ylim(0, 2.5) + 
   geom_point() +
@@ -73,7 +73,7 @@ plot1 <- ggplot(plus32mod, aes(x=time, y=100*frac.mod.abs, color=biol.rep)) +
   xlab("Time (hours)") +
   scale_color_discrete(name = "Biol. repeat")
 
-plot2 <- ggplot(plus32mod, aes(x=time, y=odds.mod.other, color=biol.rep)) +
+plot2 <- ggplot(mods, aes(x=time, y=odds.mod.other, color=biol.rep)) +
   scale_x_log10(breaks = c(3, 4, 5, 6, 8, 24, 48, 168, 336)) +
   scale_y_log10(breaks = c(.03, .04, .05, .06, .07, .08, .09, .1, .2, .3, .4, .5, .6, .7, .8, .9, 1, 2, 3, 4, 5),
                 labels = c("0.03", "", "", "", "", "", "", "0.1", "", "0.3", "", "0.5", "", "", "", "", "1.0", "", "3.0", "", ""),
@@ -89,9 +89,9 @@ plot_grid(plot1, plot2, labels = c("A", "B"))
 
 The percent modified peptides doesn't change with time, and neither do the odds:
 ```{r}
-perc.model <- lm(frac.mod.abs ~ log(time), data=plus32mod)
+perc.model <- lm(frac.mod.abs ~ log(time), data=mods)
 summary(perc.model)
-odds.model <- lm(log(odds.mod.other) ~ log(time), data=plus32mod)
+odds.model <- lm(log(odds.mod.other) ~ log(time), data=mods)
 summary(odds.model)
 ```
 
@@ -101,10 +101,10 @@ summary(odds.model)
 Looking at Met +16 Da only.
 ```{r fig.width=10, fig.height=4}
 # extract the M+16 modification
-Mp16mod <- filter(mods_summary, mod=="M_p16")
+mods <- filter(mods_summary, mod=="M_p16")
 
 # absolute fraction
-plot1 <- ggplot(Mp16mod, aes(x=time, y=100*frac.mod.abs, color=biol.rep)) +
+plot1 <- ggplot(mods, aes(x=time, y=100*frac.mod.abs, color=biol.rep)) +
   scale_x_log10(breaks = c(3, 4, 5, 6, 8, 24, 48, 168, 336)) +
   ylim(0, 15) + 
   geom_point() +
@@ -113,7 +113,7 @@ plot1 <- ggplot(Mp16mod, aes(x=time, y=100*frac.mod.abs, color=biol.rep)) +
   xlab("Time (hours)") +
   scale_color_discrete(name = "Biol. repeat")
 
-plot2 <- ggplot(Mp16mod, aes(x=time, y=odds.mod.other, color=biol.rep)) +
+plot2 <- ggplot(mods, aes(x=time, y=odds.mod.other, color=biol.rep)) +
   scale_x_log10(breaks = c(3, 4, 5, 6, 8, 24, 48, 168, 336)) +
   scale_y_log10(breaks = c(.03, .04, .05, .06, .07, .08, .09, .1, .2, .3, .4, .5, .6, .7, .8, .9, 1, 2, 3, 4, 5),
                 labels = c("0.03", "", "", "", "", "", "", "0.1", "", "0.3", "", "0.5", "", "", "", "", "1.0", "", "3.0", "", ""),
@@ -129,8 +129,8 @@ plot_grid(plot1, plot2, labels = c("A", "B"))
 
 The percent modified peptides doesn't change with time, and neither do the odds:
 ```{r}
-perc.model <- lm(frac.mod.abs ~ log(time), data=Mp16mod)
+perc.model <- lm(frac.mod.abs ~ log(time), data=mods)
 summary(perc.model)
-odds.model <- lm(log(odds.mod.other) ~ log(time), data=Mp16mod)
+odds.model <- lm(log(odds.mod.other) ~ log(time), data=mods)
 summary(odds.model)
 ```
