--- a/Analysis/mods_by_amino_acid.Rmd
+++ b/Analysis/mods_by_amino_acid.Rmd
@@ -50,10 +50,48 @@ names(sample_list) <- samples$sample
 data_list <- lapply(sample_list, readMODaOutput, moda_folder = "../MODa_Output/PTMHits/")
 # combine all into one table
 data_all <- do.call("rbind", data_list)
-# combine with other info about samples
-data_all <- inner_join(samples, data_all, by = "sample")
 
 head(data_all)
+```
+
+# Function to carry out the analysis and produce a plot
+
+```{r}
+amino_acid_bar_plot <- function(data_all, samples, target_mass_shift, ymax = 75)
+{
+  # define standard error function
+  se <- function(x) sqrt(var(x)/length(x))
+
+  data_all %>%
+    filter(mass.shift==target_mass_shift) %>% # extract the target mass shift
+    group_by(sample) %>% # analyze by sample
+    summarise_each(funs(100*./Sum), -mass.shift) %>% # normalize all and calculate percent
+    select(-Sum, -Nterm, -Cterm) -> # remove Sum, Nterm, Cterm columns as we don't plot them
+      mass_shifts # store as `mass_shifts`
+
+  # now combine with other info about samples, so that we can find samples without the   modification
+  mass_shifts <- left_join(samples, mass_shifts, by = "sample")
+
+  mass_shifts %>%
+    gather(amino.acid, percent, A:Y) %>% # turn table into "long" format
+    mutate(percent = replace(percent, is.na(percent), 0)) %>% # set NAs to zero
+    group_by(amino.acid) %>% # group by amino acid
+    summarise(percent.mean = mean(percent), percent.se = se(percent)) ->
+      mods_summarized # store as `mods_summarized`
+
+  label <- paste(ifelse(target_mass_shift < 0, "", "+"), as.character(target_mass_shift), " Da", sep='')
+  
+  # now plot
+  plot <- ggplot(mods_summarized, aes(x=amino.acid, y=percent.mean)) +
+    geom_bar(stat="identity", fill='red') +
+    geom_errorbar(aes(ymin = percent.mean-percent.se, ymax = percent.mean+percent.se)) + 
+    scale_y_continuous(limits = c(0, ymax), expand = c(0, 0)) +
+    ylab("Percent of total modifications") +
+    xlab("Modified amino acid") + 
+    draw_label(label, x=1, y=.9*ymax, hjust=0, vjust=0)
+
+  plot
+}
 ```
 
 # +1 Da mod
@@ -61,29 +99,7 @@ head(data_all)
 We make a bar plot of the percent of modified peptides of a given mass shift, using the variation among samples to estimate errors.
 
 ```{r}
-# define standard error function
-se <- function(x) sqrt(var(x)/length(x))
-
-data_all %>%
-  filter(mass.shift==1) %>% # extract the +1 mass shift
-  group_by(sample) %>% # analyze by sample
-  summarise_each(funs(100*./Sum), -mass.shift) %>% # normalize all and calculate percent
-  select(-Sum, -Nterm, -Cterm) -> # remove Sum, Nterm, Cterm columns as we don't plot them
-    mass_shifts # store as `mass_shifts`
-
-# now calculate means and standard errors
-mass_shifts %>%
-  gather(amino.acid, percent, A:Y) %>% # turn table into "long" format
-  group_by(amino.acid) %>% # group by amino acid
-  summarise(percent.mean = mean(percent), percent.se = se(percent)) ->
-   mods_summarized # store as `mods_summarized`
-
-# now plot
-plot <- ggplot(mods_summarized, aes(x=amino.acid, y=percent.mean)) +
-  geom_bar(stat="identity", fill='red') +
-  geom_errorbar(aes(ymin = percent.mean-percent.se, ymax = percent.mean+percent.se)) + 
-  ylab("Percent of total modifications") +
-  xlab("Modified amino acid")
+plot <- amino_acid_bar_plot(data_all, samples, target_mass_shift=1)
 
 # save the plot as pdf
 #save_plot("plus1_vs_amino_acid.pdf", plot)
@@ -92,29 +108,9 @@ plot # display plot
 
 # +16 Da mod
 
-We make a bar plot of the percent of modified peptides of a given mass shift, using the variation among samples to estimate errors.
 
 ```{r}
-data_all %>%
-  filter(mass.shift==16) %>% # extract the +16 mass shift
-  group_by(sample) %>% # analyze by sample
-  summarise_each(funs(100*./Sum), -mass.shift) %>% # normalize all and calculate percent
-  select(-Sum, -Nterm, -Cterm) -> # remove Sum, Nterm, Cterm columns as we don't plot them
-    mass_shifts # store as `mass_shifts`
-
-# now calculate means and standard errors
-mass_shifts %>%
-  gather(amino.acid, percent, A:Y) %>% # turn table into "long" format
-  group_by(amino.acid) %>% # group by amino acid
-  summarise(percent.mean = mean(percent), percent.se = se(percent)) ->
-   mods_summarized # store as `mods_summarized`
-
-# now plot
-plot <- ggplot(mods_summarized, aes(x=amino.acid, y=percent.mean)) +
-  geom_bar(stat="identity", fill='red') +
-  geom_errorbar(aes(ymin = percent.mean-percent.se, ymax = percent.mean+percent.se)) + 
-  ylab("Percent of total modifications") +
-  xlab("Modified amino acid")
+plot <- amino_acid_bar_plot(data_all, samples, target_mass_shift=16)
 
 # save the plot as pdf
 #save_plot("plus1_vs_amino_acid.pdf", plot)
@@ -123,31 +119,10 @@ plot # display plot
 
 # -2 Da mod
 
-We make a bar plot of the percent of modified peptides of a given mass shift, using the variation among samples to estimate errors.
 
 ```{r}
-data_all %>%
-  filter(mass.shift==-2) %>% # extract the +16 mass shift
-  group_by(sample) %>% # analyze by sample
-  summarise_each(funs(100*./Sum), -mass.shift, -time, -biol.rep) %>% # normalize all and calculate percent
-  select(-Sum, -Nterm, -Cterm) -> # remove Sum, Nterm, Cterm columns as we don't plot them
-    mass_shifts # store as `mass_shifts`
+plot <- amino_acid_bar_plot(data_all, samples, target_mass_shift=-2)
 
-# now calculate means and standard errors
-mass_shifts %>%
-  gather(amino.acid, percent, A:Y) %>% # turn table into "long" format
-  group_by(amino.acid) %>% # group by amino acid
-  summarise(percent.mean = mean(percent), percent.se = se(percent)) ->
-   mods_summarized # store as `mods_summarized`
-
-# now plot
-plot <- ggplot(mods_summarized, aes(x=amino.acid, y=percent.mean)) +
-  geom_bar(stat="identity", fill='red') +
-  geom_errorbar(aes(ymin = percent.mean-percent.se, ymax = percent.mean+percent.se)) + 
-  ylab("Percent of total modifications") +
-  xlab("Modified amino acid")
-
-# save the plot as pdf
 #save_plot("plus1_vs_amino_acid.pdf", plot)
 plot # display plot
 ```
