--- a/Analysis/Methylations_figures.Rmd
+++ b/Analysis/Methylations_figures.Rmd
@@ -53,7 +53,7 @@ summary(perc.model)
 odds.model <- lm(log(odds.mod.other) ~ log(time), data=mods)
 summary(odds.model)
 ```
-## K+14
+## K+14 lysine methylation is well known
 ```{r fig.width=10, fig.height=4}
 # extract the modification
 mods <- filter(mods_summary, mod=="K_M14")
@@ -90,10 +90,47 @@ odds.model <- lm(log(odds.mod.other) ~ log(time), data=mods)
 summary(odds.model)
 ```
 
-## R+14
+## R+14 Arginine methylation is also known
 ```{r fig.width=10, fig.height=4}
 # extract the modification
 mods <- filter(mods_summary, mod=="R_M14")
+
+# absolute fraction
+plot1 <- ggplot(mods, aes(x=time, y=100*frac.mod.abs, color=biol.rep)) +
+  scale_x_log10(breaks = c(3, 4, 5, 6, 8, 24, 48, 168, 336)) +
+  ylim(0, .1) + 
+  geom_point() +
+  geom_line() +
+  ylab("Percent modified peptides") +
+  xlab("Time (hours)") +
+  scale_color_discrete(name = "Biol. repeat")
+
+plot2 <- ggplot(mods, aes(x=time, y=odds.mod.other, color=biol.rep)) +
+  scale_x_log10(breaks = c(3, 4, 5, 6, 8, 24, 48, 168, 336)) +
+  scale_y_log10(breaks = c(.01, .02, .03, .04, .05, .06, .07, .08, .09, .1, .2, .3, .4, .5, .6, .7, .8, .9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10),
+                labels = c("0.01", "", "0.03", "", "", "", "", "", "", "0.1", "", "0.3", "", "0.5", "", "", "", "", "1.0", "", "3.0", "", "", "", "", "", "", "10.0"),
+                limits = c(.01, 10.)) + 
+  geom_point() +
+  geom_line() +
+  ylab("Odds R+14 Da / other") +
+  xlab("Time (hours)") +
+  scale_color_discrete(name = "Biol. repeat")
+
+plot_grid(plot1, plot2, labels = c("A", "B"))
+```
+
+Behavior over time:
+```{r}
+perc.model <- lm(frac.mod.abs ~ log(time), data=mods)
+summary(perc.model)
+odds.model <- lm(log(odds.mod.other) ~ log(time), data=mods)
+summary(odds.model)
+```
+
+## E+14 Glutamic acid methylation (is shown in some studies)
+```{r fig.width=10, fig.height=4}
+# extract the modification
+mods <- filter(mods_summary, mod=="E_M14")
 
 # absolute fraction
 plot1 <- ggplot(mods, aes(x=time, y=100*frac.mod.abs, color=biol.rep)) +
