Few fixes to the notebooks, added calculated unmodified MW column to all_pept

--- a/Analysis/parse_MODa.ipynb
+++ b/Analysis/parse_MODa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +96,7 @@
     "\n",
     "    peptide: peptide seq w/ MODa annotation (string)\n",
     "    \"\"\"\n",
-    "    hit = re.search('(\\w?\\.\\w*)((\\+|-)\\d+)(\\w*\\.\\w?)',peptide)\n",
+    "    hit = re.search('\\w?\\.(\\w*)((\\+|-)\\d+)(\\w*)\\.\\w?',peptide)\n",
     "    full_pept = \"\"\n",
     "    modification = 0\n",
     "    modloc = -1\n",
@@ -109,7 +109,8 @@
     "        if modres in constants.keys():\n",
     "            modification += constants[modres]\n",
     "    else:\n",
-    "        full_pept=peptide.replace(\"-\",\"\")\n",
+    "        pept_seq_search = re.search('\\w?\\.(\\w+)\\.\\w?',peptide)\n",
+    "        full_pept=pept_seq_search.group(1)\n",
     "        modification = 0\n",
     "    return (full_pept,modification,modloc,modres)\n"
    ]
@@ -124,9 +125,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2527135, 12)\n",
+      "(2527135, 28)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print all_pept_raw.shape\n",
+    "print all_pept.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -147,12 +170,12 @@
       "3       0.1744              K.LAGDLETLR.S  254160296           219         227  \n",
       "4       0.1571              K.LAGDLETLR.S  254160296           219         227  \n",
       "proteins len: 4201\n",
-      "  DataSet  Index  ObservedMW  Charge  CalculatedMW  DeltaMass  Score  Probability          Peptide       giID  PeptideStart  PeptideEnd RepliconName RepliconAccession   Start    Stop Strand   GeneID Locus   LocusTag ProteinProduct_x  Length COGs                                  ProteinName ProteinProduct_y  Time  BiolRep  TechRep     PeptideSeq  MassShift  ModifiedPosition ModifiedResidue\n",
-      "0    100a    128    986.5384       2      986.5396    -0.0013     23       0.3035    K.LAGDLETLR.S  254160296           219         227          chr       NC_012967.1  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810    -  outer membrane protein assembly factor YaeT     YP_003043404     6        3        1  K.LAGDLETLR.S          0                -1               -\n",
-      "1    100a    164    986.5396       2      986.5396    -0.0000     21       0.1744    K.LAGDLETLR.S  254160296           219         227          chr       NC_012967.1  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810    -  outer membrane protein assembly factor YaeT     YP_003043404     6        3        1  K.LAGDLETLR.S          0                -1               -\n",
-      "2    100a    167    986.5377       2      986.5396    -0.0019     22       0.1571    K.LAGDLETLR.S  254160296           219         227          chr       NC_012967.1  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810    -  outer membrane protein assembly factor YaeT     YP_003043404     6        3        1  K.LAGDLETLR.S          0                -1               -\n",
-      "3    100a    173    987.5440       2      987.5396     0.0043     19       0.2249  K.L+1AGDLETLR.S  254160296           219         227          chr       NC_012967.1  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810    -  outer membrane protein assembly factor YaeT     YP_003043404     6        3        1  K.LAGDLETLR.S          1                 2               L\n",
-      "4    100a    190    986.5389       2      986.5396    -0.0008     26       0.8113    K.LAGDLETLR.S  254160296           219         227          chr       NC_012967.1  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810    -  outer membrane protein assembly factor YaeT     YP_003043404     6        3        1  K.LAGDLETLR.S          0                -1               -\n"
+      "  DataSet  Index  ObservedMW  Charge  CalculatedMW  DeltaMass  Score  Probability          Peptide       giID  PeptideStart  PeptideEnd   Start    Stop Strand   GeneID Locus   LocusTag ProteinProduct_x  Length                                  ProteinName  Time  BiolRep  TechRep PeptideSeq  MassShift  ModifiedPosition ModifiedResidue\n",
+      "0    100a    128    986.5384       2      986.5396    -0.0013     23       0.3035    K.LAGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          0                -1               -\n",
+      "1    100a    164    986.5396       2      986.5396    -0.0000     21       0.1744    K.LAGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          0                -1               -\n",
+      "2    100a    167    986.5377       2      986.5396    -0.0019     22       0.1571    K.LAGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          0                -1               -\n",
+      "3    100a    173    987.5440       2      987.5396     0.0043     19       0.2249  K.L+1AGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          1                 0               L\n",
+      "4    100a    190    986.5389       2      986.5396    -0.0008     26       0.8113    K.LAGDLETLR.S  254160296           219         227  200770  203202      +  8175141  yaeT  ECB_00175   YP_003043404.1     810  outer membrane protein assembly factor YaeT     6        3        1  LAGDLETLR          0                -1               -\n"
      ]
     }
    ],
@@ -188,16 +211,14 @@
     "pept_seqs = all_pept['Peptide']\n",
     "pept_seqs,mods,modloc,modres = zip(*pept_seqs.apply(get_mod))\n",
     "\n",
-    "# Add modification info columns to all_pept\n",
+    "#Add modification info columns to all_pept\n",
     "all_pept[\"PeptideSeq\"] = pd.Series(pept_seqs)\n",
     "all_pept[\"MassShift\"] = pd.Series(mods)\n",
     "all_pept[\"ModifiedPosition\"] = pd.Series(modloc)\n",
     "all_pept[\"ModifiedResidue\"] = pd.Series(modres)\n",
     "\n",
     "# Drop columns if not needed\n",
-    "#all_pept = all_pept.drop([\"DataSet\",\"ObservedMW\",\"Charge\",\"CalculatedMW\",\"DeltaMass\",\"Score\",\"Peptide\",\n",
-    "#               \"RepliconName\",\"RepliconAccession\",\"Start\",\"Stop\",\"Strand\",\"ProteinProduct_x\",\"ProteinProduct_y\",\n",
-    "#               \"TechRep\",\"Length\",\"COGs\"],axis=1)\n",
+    "all_pept = all_pept.drop([\"RepliconName\",\"RepliconAccession\",\"ProteinProduct_y\",\"COGs\"],axis=1)\n",
     "\n",
     "# Check! [replace w/ an assertion if do a lot more of these]\n",
     "print all_pept.head().to_string()"
@@ -205,14 +226,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Output raw peptide sequences for external MW calculation\n",
+    "all_pept.PeptideSeq.to_csv(\"data/all_pept_PeptideSeq.txt\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Use ExPaSY protein tools peptide MW calculator to generate table of monoisotopic molecular weights for the unmodified peptides\n",
+    "#\n",
+    "# Output formats may vary if you use something else...\n",
+    "\n",
+    "mono_MW = pd.read_csv(\"data/all_pept_monoMW.txt\",header=None,delim_whitespace=True,names=[\"PeptideSeq\",\"pI\",\"CalculatedUnmodMW\"])\n",
+    "mono_MW.drop(['pI'],axis=1,inplace=True)\n",
+    "all_pept_calcMW = pd.merge(all_pept,mono_MW,on=\"PeptideSeq\",how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "all_pept.to_csv(\"data/all_pept.tsv\",sep=\"\\t\")"
+    "all_pept_calcMW.to_csv(\"data/all_pept.tsv\",sep=\"\\t\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
